--- a/src/assets/styles/Projects.scss
+++ b/src/assets/styles/Projects.scss
@@ -1,8 +1,13 @@
 .projects-container {
     display: flex;
     flex-direction: column;
-    padding: 5% 10%;
+    padding: 20px 10%;
     text-align: left;
+}
+
+.project-image {
+    width: 100%;
+    text-align: center;
 }
   
 .projects-container .projects-grid {
@@ -24,6 +29,9 @@
     border-radius: 5px;
     transition: transform .2s;
     margin: 0 auto;
+    max-width: 100%;
+    height: 450px;
+    background-color: white;
 }
   
 .zoom:hover {
@@ -32,6 +40,10 @@
 
 @media screen {
     @media (max-width: 700px) {
+        .zoom {
+            height: 350px;
+        }
+        
         .projects-container {
             display: block;
             padding-left: 5%;
